# claim-plane

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmark/: README.md  abc-spec.example.json  run_abc_harness.py  run_frontier_pack.py  run_protocol_suite.py
benchmark/frontier-pack/: spec.example.json  tasks.json
docs/: ARCHITECTURE.md  BENCHMARK.md  BROKERED_RUNTIME.md  DESIGN_RATIONALE.md  INTEGRATIONS.md  PROTOCOL.md  RELEASING.md  STORAGE_BACKENDS.md  TRUSTED_EXECUTION.md
examples/rate-limiter/: broker-commands.example.json  brokered-run.example.json  integration-run.example.json  lexicon.yaml
examples/rate-limiter/intents/: conflicting-contract.json  core.json  metrics.json
examples/rate-limiter/manifests/: core-clean.json  core-drift.json
examples/rate-limiter/traces/: metrics.jsonl
schemas/: broker-request.schema.json  change-intent.schema.json  change-manifest.schema.json  integration-run.schema.json  observation-session.schema.json  observation-trace.schema.json
scripts/: check.sh  demo.sh
src/claim_plane/: __init__.py  __main__.py  cli.py
src/claim_plane/arbiter/: __init__.py  base.py  lexicon.py
src/claim_plane/coordination/: __init__.py  admission.py  context.py
src/claim_plane/core/: __init__.py  extract.py  governance.py  models.py  plane.py  registry.py  semantic.py  serialization.py  store.py
src/claim_plane/git/: __init__.py  hooks.py
tests/: test_broker_attestation.py  test_broker_runtime.py  test_broker_tree_provenance.py  test_core.py  test_dependency_integration.py  test_dynamic_scope.py  test_frontier.py  test_lifecycle_regressions.py  test_mcp_frontier.py  test_pinning_observation_sandbox.py  test_semantic_admission.py  test_snapshot_evidence.py  test_storage_mode_safety.py  test_trusted_observation.py  test_writer_lock_fencing.py
(+17 files in other folders)
